--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Austin's Website</title>
 </head>
 <body>
-    
+   <h1>Welcome to my Webpage</h1> 
+   <img src="Austin Professional Headshot.jpg" alt="Image of Austin">
+   <p>come back to see more changes</p>
 </body>
 </html>
