--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
    <h1>Welcome to my Webpage</h1> 
    <img src="Austin Professional Headshot.jpg" alt="Image of Austin">
    <p>come back to see more changes</p>
+   <a href="https://austinhone-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a>
 </body>
 </html>
