--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <h1>Welcome to my Webpage</h1> 
    <img src="Austin Professional Headshot.jpg" alt="Image of Austin">
    <p>come back to see more changes</p>
-   <a href="https://austinhone-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a>
+   <a href="https://austinhone-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a><br>
    <a href="looker.html">Check out my Looker Dashboard</a>
 </body>
 </html>
