--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <img src="Austin Professional Headshot.jpg" alt="Image of Austin">
    <p>come back to see more changes</p>
    <a href="https://austinhone-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a><br>
-   <a href="looker.html">Check out my Looker Dashboard</a>
+   <a href="looker.html">Check out my Looker Dashboard</a><br>
+   <a href="tableau.html">Check out a Tableau Visualization</a>
 </body>
 </html>
