--- a/looker.html
+++ b/looker.html
@@ -6,7 +6,7 @@
     <title>Looker Dashboard</title>
 </head>
 <body>
-    <a href="index.html">Back to Main Page</a>
+    <a href="index.html">Back to Main Page</a><br>
     <iframe width="780" height="1040" src="https://lookerstudio.google.com/embed/reporting/50d835a7-a16e-4fcc-8ac0-4c648a8f8562/page/Sp7pD" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
 </body>
 </html>
