--- a/tableau.html
+++ b/tableau.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="index.html">Back to Main Page</a>
+    <a href="index.html">Back to Main Page</a><br>
     <div class='tableauPlaceholder' id='viz1709009766520' style='position: relative'><noscript><a href='#'><img
                     alt='Japan Earthquakes '
                     src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ja&#47;JapanEarthquakes_17086902910990&#47;JapanEarthquakes&#47;1_rss.png'
