--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <p>come back to see more changes</p>
    <a href="https://austinhone-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a><br>
    <a href="looker.html">Check out my Looker Dashboard</a><br>
-   <a href="tableau.html">Check out a Tableau Visualization</a>
+   <a href="tableau.html">Check out a Tableau Visualization</a><br>
+   <a href="mariokart_site-4/mariokart_site">MarioKart Site</a>
 </body>
 </html>
